chore(setting): 설정파일추가 및 변경

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,16 +51,14 @@
     "**/node_modules": true,
     "**/lib/**/*.d.ts": true,
     "**/lib/**/*.js": true,
-    "**/dist": false,
-    "**/src/**/*.js": true
+    "**/dist": true
   },
-  "explorerExclude.backup": null,
-  "git.enabled": true,
-  "git.decorations.enabled": false,
-  "git.countBadge": "off",
+  "explorerExclude.backup": {},
   "typescript.tsdk": "node_modules/typescript/lib",
   "files.associations": {
     "*.json": "json",
-    "tsconfig.json": "jsonc"
-  }
+    "tsconfig.json": "jsonc",
+  },
+  "git.countBadge": "off",
+  "git.decorations.enabled": false,
 }
