--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,15 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
-    "outDir": "lib",
+    "target": "es2016",
     "module": "commonjs",
-    "strict": true,
     "moduleResolution": "node",
-    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
   },
   "exclude": [
-    "./node_modules"
+    "node_modules"
   ]
 }
