--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/core": "^8.2.6",
     "@nestjs/config": "^1.1.6",
+    "@nestjs/schedule": "^1.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5"
